# paddles

./: .gitignore  .siftignore  AGENTS.md  ARCHITECTURE.md  CODE_WALKTHROUGH.md  CONFIGURATION.md  CONSTITUTION.md  Cargo.toml  EVALUATIONS.md  INSTRUCTIONS.md  PHILOSOPHY.md  POLICY.md  PROTOCOL.md  README.md  RELEASE.md  SEARCH.md  STAGE.md  chord_test.txt  flake.nix  justfile  keel.toml  package-lock.json  package.json  result  story_proposal.md  turbo.json
.github/workflows/: ci.yml  publish-docs.yml
.keel/: README.md  flow_history.json  heartbeat
.keel/adrs/: 001-sift-progress-callback-requirements.md
.keel/adrs/VFOfsYAjc/: README.md
.keel/adrs/VFgz4HnE2/: README.md
.keel/adrs/VHaTauxe4/: README.md
.keel/adrs/VJZBM9Guy/: README.md
.keel/bearings/VFKApee25/: ASSESSMENT.md  BRIEF.md  EVIDENCE.md  README.md
.keel/bearings/VFUNJz9zT/: ASSESSMENT.md  BRIEF.md  EVIDENCE.md  README.md
.keel/bearings/VJZ034dF2/: ASSESSMENT.md  BRIEF.md  EVIDENCE.md  README.md
.keel/epics/VE47wLZRk/: PRD.md  README.md
.keel/epics/VE4Hrkkgd/: PRD.md  README.md
.keel/epics/VE5bGJZTR/: PRD.md  README.md
.keel/epics/VE5fVmIs3/: PRD.md  README.md
.keel/epics/VE5jWMShq/: PRD.md  README.md
.keel/epics/VE5oA4s7x/: PRD.md  README.md
.keel/epics/VE5qX07aD/: PRD.md  README.md
.keel/epics/VE5ttmBfz/: PRD.md  README.md
.keel/epics/VE5x7tOAX/: PRD.md  README.md
.keel/epics/VE5zxrA1w/: PRD.md  README.md
.keel/epics/VF7t633ux/: PRD.md  README.md
.keel/epics/VFBTXlHli/: PRD.md  README.md
.keel/epics/VFCzL9KKd/: PRD.md  README.md
.keel/epics/VFDMnu8k9/: PRD.md  README.md
.keel/epics/VFDbdzqtU/: PRD.md  README.md
.keel/epics/VFDv1i61H/: PRD.md  README.md
.keel/epics/VFECyWLL6/: PRD.md  README.md
.keel/epics/VFGy53NJt/: PRD.md  README.md
.keel/epics/VFH4BXH4F/: PRD.md  README.md
.keel/epics/VFHIUOcFc/: PRD.md  README.md
.keel/epics/VFJ5rdPZP/: PRD.md  README.md
.keel/epics/VFKApee25/: PRD.md  (+1 more)
apps/docs/: README.md  docusaurus.config.ts  package.json  playwright.config.mjs  sidebars.ts
apps/web/: index.html  package.json  playwright.config.mjs  playwright.legacy.config.mjs  tsconfig.json  vitest.config.ts
crates/paddles-conversation/: Cargo.toml
scripts/: publish-docs.sh
src/: lib.rs  main.rs
src/application/: agent_loop.rs  agent_loop_replan.rs  context_assembly.rs  conversation_read_model.rs  deliberation.rs  evals.rs  execution_contract.rs  execution_policy.rs  external_capability.rs  external_capability_execution.rs  final_rendering.rs  harness_capability_posture.rs  interpretation_chamber.rs  mod.rs  planner_action_execution.rs  planner_action_schema.rs  planner_loop.rs  read_model.rs  recursive_control.rs  runtime_posture_projection.rs  session.rs  synthesis.rs  synthesis_chamber.rs  turn.rs  turn_orchestration.rs  worker_runtime.rs
src/infrastructure/: config.rs  conversation_history.rs  credentials.rs  dev_workflow_contracts.rs  execution_governance.rs  execution_hand.rs  external_capability.rs  harness_profile.rs  hosted_transit_contract.rs  mod.rs  native_transport.rs  providers.rs  rendering.rs  runtime_preferences.rs  runtime_presentation.rs  sift_cache.rs  specialist_brains.rs  step_timing.rs  terminal.rs  transport_mediator.rs  workspace_entity_index.rs  workspace_paths.rs
support/hooks/: pre-commit
tests/: runtime_presentation_boundary.rs
website/: docusaurus.config.ts  package-lock.json  package.json  playwright.config.mjs  sidebars.ts
website/docs/: intro.mdx
website/e2e/: web-shell.spec.mjs
website/scripts/: serve-web-shell-fixture.mjs
(+1737 files in other folders)
