[package]
name = "paddles"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "paddles"
path = "src/main.rs"

[dependencies]
wonopcode-core = { git = "https://github.com/wonop-io/wonopcode", branch = "main" }
wonopcode-provider = { git = "https://github.com/wonop-io/wonopcode", branch = "main" }
wonopcode-tools = { git = "https://github.com/wonop-io/wonopcode", branch = "main" }
hf-hub = "0.4.1"
sift = { git = "https://github.com/rupurt/sift" }
candle-core = "0.8.2"
candle-transformers = "0.8.2"
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
async-trait = "0.1.86"
futures = "0.3.31"
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
clap = { version = "4.5.28", features = ["derive", "env"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
